rename mongo uri

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8080
 #server.address=127.0.0.1
 
 # MONGODB
-spring.data.mongodb.uri="mongodb://test:test@localhost:27017/test"
+spring.data.mongodb.uri="mongodb://test:test@127.0.0.1:27017/test"
 
 # REDIS
 #spring.data.redis.repositories.enabled=true
