--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,11 @@ server.port=8080
 #server.address=127.0.0.1
 
 # MONGODB
-#spring.data.mongodb.uri="mongodb://test:test@127.0.0.1:27017/test"
+spring.data.mongodb.port=27017
+spring.data.mongodb.host=localhost
+spring.data.mongodb.database=test
+spring.data.mongodb.password=test
+spring.data.mongodb.username=test
 
 # REDIS
 #spring.data.redis.repositories.enabled=true
